--- a/bag.html
+++ b/bag.html
@@ -20,7 +20,9 @@
 <body class="body-small">
   <header class="relative-header">
     <section class="dark-header">
-      <p>Sale up to 20%</p>
+      <a href="deals.html" class="dark-header-text">
+        <p>Sale up to 20%</p>
+      </a>
     </section>
     <section class="lower-header">
       <label for="hamburger-menu"><i class="fa-sharp fa-solid fa-bars"></i><span class="span__empty">!!!Deleted!!!</span></label>
@@ -38,18 +40,31 @@
         </nav> 
         <!-- Some Icons from Font Awesome and other websites did not work for some reason, had to use img from Figma, wrote description for blind people to understand the images -->
         <div class="icons">
-          <a href="#"><img src="/pictures/Icons-profile.png" alt="Your Profile"></a>
-          <a href="bag.html"><img src="/pictures/Icons-bag.png" alt="My Bag"></a>
-          <a href="#"><img src="/pictures/Icons-search.png" alt="Search"></a>
+          <a href="#"><i class="fa-solid fa-user"><span class="span__empty">!!!Deleted!!!</span></i></a>
+          <a href="bag.html"><i class="fa-solid fa-bag-shopping" id="bagIcon"><span class="span__empty">!!!Deleted!!!</span></i></a>
+          <a href="#"><i class="fa-solid fa-magnifying-glass"></i><span class="span__empty">!!!Deleted!!!</span></a>
         </div>
       </section>
   </header>
 
   <main>
+
+    <section>
+      <div class="breadcrumbs__container">
+        <ul>
+          <li class="breadcrumbs-house"><a href="/"><i class="fa-solid fa-house"></i><span class="span__empty">!!!Deleted!!!</span></a></li>
+          <li><i class="fa-solid fa-chevron-right"></i></li>
+          <li><a href="details.html">Details Page</a></li>
+          <li><i class="fa-solid fa-chevron-right"></i></li>
+          <li><a href="">Your Bag</a></li>
+        </ul>
+      </div>
+    </section>
+
+
     <section class="bag-main-flex">
       <section class="bag">
-        <h1 class="h1-grey">My Bag (1)</h1>
-        <div class="line"></div>
+        <h1>My Bag (1)</h1>
         <img src="/pictures/RainyDays_Jacket4.png" class="bag-img" alt="Black biker 2021 marine jacket">
           <div class="bag__content">
               <div class="stars">
@@ -71,7 +86,7 @@
                 <label for="size-xxl" class="btn-size">XXL</label>
               </div>
               <div class="bag__order-amount">
-                <label for="amount">Quantity</label>
+                <label for="amount">Amount</label>
                 <select name="amount" id="amount" class="cta_quantity">
                   <option value="1">1</option>
                   <option value="2">2</option>
@@ -86,15 +101,17 @@
 
       <section class="order-summary">
         <div class="order-summary__content">
-          <h1 class="h1-grey">Order Summary</h1>
-          <div class="line"></div>
+          <h2>Order Summary</h2>
+          <hr>
           <p class="check">Items: 1</p>
           <p class="check">Subtotal: 799,00kr</p>
           <p class="check">Giftcard: None</p>
           <p class="check">Shipping: Free</p>
-          <div class="line"></div>
+          <hr>
+          <hr>
           <p class="check">Total: 799,00 kr</p>
-          <a href="checkout.html" class="cta-checkout">Checkout</a>
+          <hr>
+          <a href="checkout.html" class="cta-submit">Checkout</a>
         </div>
       </section>
     </section>
@@ -103,7 +120,7 @@
 
   <footer> 
     <a href="index.html" class="footer-logo">
-      <img src="/pictures/Logo-white.png" alt="Logo of the website">
+      <img src="/pictures/Logo-white.png" alt="Logo of the website" class="footer-logo">
     </a>
     <nav class="footer-nav">
       <ul>
