--- a/deals.html
+++ b/deals.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>RAINYDAYS | Manwear</title>
-    <meta name="description" content="Best man jackets available from the Rainy Days collection">
+    <title>RAINYDAYS | Deals</title>
+    <meta name="description" content="Best deals available from the Rainy Days collection">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inria+Serif&family=Montserrat:wght@100&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/fontawesome-free-6.3.0-web/css/all.css">
-    <script src="js/man.js" type="module"></script>
+    <script src="js/deals.js" type="module"></script>
     <script defer src="js/ui/hotjar.js"></script>
   </head>
 
@@ -33,9 +33,9 @@
           <nav class="main-header">
             <ul>
               <li class="header-text"><a href="/">Home</a></li>
-              <li class="header-text"><a href="deals.html">Deals</a></li>
+              <li class="header-text"><a class="active">Deals</a></li>
               <li class="header-text"><a href="women.html">Women</a></li>
-              <li class="header-text"><a class="active">Man</a></li>
+              <li class="header-text"><a href="man.html">Man</a></li>
               <li class="header-text"><a href="list-of-jackets.html">All</a></li>
             </ul>
           </nav>
@@ -51,7 +51,7 @@
       <main class="body-small">
         <body>
           <section class="header-top">
-            <h1 class="h1-grey">New collection for all the man</h1>
+            <h1 class="h1-grey">Here are some amazing <span class="deals-header">Deals!!!</span></h1>
             <div class="line"></div>
           </section>
           <section class="spes-jacket__rows">
