--- a/about.html
+++ b/about.html
@@ -20,7 +20,9 @@
 <body class="body-small">
   <header>
     <section class="dark-header">
-      <p>Sale up to 20%</p>
+      <a href="deals.html" class="dark-header-text">
+        <p>Sale up to 20%</p>
+      </a>
     </section>
     <section class="lower-header">
       <label for="hamburger-menu"><i class="fa-sharp fa-solid fa-bars"></i><span class="span__empty">!!!Deleted!!!</span></label>
@@ -38,11 +40,11 @@
         </nav>
         <!-- Some Icons from Font Awesome and other websites did not work for some reason, had to use img from Figma, wrote description for blind people to understand the images -->
         <div class="icons">
-          <a href="#"><img src="/pictures/Icons-profile.png" alt="Your Profile"></a>
-          <a href="bag.html"><img src="/pictures/Icons-bag.png" alt="My Bag"></a>
-          <a href="#"><img src="/pictures/Icons-search.png" alt="Search"></a>
+          <a href="#"><i class="fa-solid fa-user"><span class="span__empty">!!!Deleted!!!</span></i></a>
+          <a href="bag.html"><i class="fa-solid fa-bag-shopping" id="bagIcon"><span class="span__empty">!!!Deleted!!!</span></i></a>
+          <a href="#"><i class="fa-solid fa-magnifying-glass"></i><span class="span__empty">!!!Deleted!!!</span></a>
         </div>
-    </section>
+      </section>
   </header>
 
   <main>
@@ -55,7 +57,7 @@
             After almost not surviving the trip, he has seen an opportunity  to change the lives of a lot of people.  During that time and age, no company has put themselves through the harsh weathers using their own jackets. This was about to change as Jerremy founded Rainydays. 
           </p>
           <p class="about-sm-text">-Now no one will get cold</p>
-          <p class="about-cta"><a href="list-of-jackets.html" class="cta-discover">Discover our Collection</a></p>
+          <p class="about-cta"><a href="list-of-jackets.html" class="cta-about-discover">Discover our Collection</a></p>
         </div>
       </section>
     </section>
@@ -67,14 +69,14 @@
           After almost not surviving the trip, he has seen an opportunity  to change the lives of a lot of people.  During that time and age, no company has put themselves through the harsh weathers using their own jackets. This was about to change as Jerremy founded Rainydays. 
         </p>
         <p class="about-sm-text">-Now no one will get cold</p>
-        <a href="list-of-jackets.html" class="cta-discover">Discover our Collection</a>
+        <a href="list-of-jackets.html" class="cta-about-discover">See Collection</a>
       </div>
     </section>
   </main>
 
   <footer class="about-footer"> 
     <a href="index.html" class="footer-logo">
-      <img src="/pictures/Logo-white.png" alt="Logo of the website">
+      <img src="/pictures/Logo-white.png" alt="Logo of the website" class="footer-logo">
     </a>
     <nav class="footer-nav">
       <ul>
@@ -86,10 +88,10 @@
     </nav>
     <!-- Some Icons from Font Awesome and other websites did not work for some reason, had to use img from Figma, wrote description for blind people to understand the images -->
     <div class="footer-icons">
-        <a href="#"><img src="pictures/Facebook-icon.png" alt="Facebook page"></a>
-        <a href="#"><img src="pictures/Insta-icon.png" alt="Instagram page"></a>
-        <a href="#"><img src="pictures/Twitter-icon.png" alt="Twitter page"></a>
-        <a href="#"><img src="pictures/LinkedIN-icon.png" alt="LinkedIn page"></a>
+      <a href="#"><img src="pictures/Facebook-icon.png" alt="Facebook page"></a>
+      <a href="#"><img src="pictures/Insta-icon.png" alt="Instagram page"></a>
+      <a href="#"><img src="pictures/Twitter-icon.png" alt="Twitter page"></a>
+      <a href="#"><img src="pictures/LinkedIN-icon.png" alt="LinkedIn page"></a>
     </div>
   </footer>
 </body>
