--- a/checkout.html
+++ b/checkout.html
@@ -13,14 +13,17 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inria+Serif&family=Montserrat:wght@100&family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/fontawesome-free-6.3.0-web/css/all.css">
-  <script defer src="js/ui/hotjar.js"></script>
+  <script src="js/ui/hotjar.js"></script>
+  <script defer src="/js/helper/validateCheckoutForm.js"></script>
 </head>
 
 
 <body class="body-small">
   <header class="relative-header">
     <section class="dark-header">
-      <p>Sale up to 20%</p>
+      <a href="deals.html" class="dark-header-text">
+        <p>Sale up to 20%</p>
+      </a>
     </section>
     <section class="lower-header">
       <label for="hamburger-menu"><i class="fa-sharp fa-solid fa-bars"></i><span class="span__empty">!!!Deleted!!!</span></label>
@@ -38,78 +41,109 @@
         </nav>
         <!-- Some Icons from Font Awesome and other websites did not work for some reason, had to use img from Figma, wrote description for blind people to understand the images -->
         <div class="icons">
-          <a href="#"><img src="/pictures/Icons-profile.png" alt="Your Profile"></a>
-          <a href="bag.html"><img src="/pictures/Icons-bag.png" alt="My Bag"></a>
-          <a href="#"><img src="/pictures/Icons-search.png" alt="Search"></a>
+          <a href="#"><i class="fa-solid fa-user"><span class="span__empty">!!!Deleted!!!</span></i></a>
+          <a href="bag.html"><i class="fa-solid fa-bag-shopping" id="bagIcon"><span class="span__empty">!!!Deleted!!!</span></i></a>
+          <a href="#"><i class="fa-solid fa-magnifying-glass"></i><span class="span__empty">!!!Deleted!!!</span></a>
         </div>
       </section>
   </header>
 
   <main>
-    <section class="question">
-      <h1 class="h1-grey visible">Checkout</h1>
-      <div class="line"></div>
+    <section>
+      <div class="breadcrumbs__container">
+        <ul>
+          <li class="breadcrumbs-house"><a href="/"><i class="fa-solid fa-house"></i><span class="span__empty">!!!Deleted!!!</span></a></li>
+          <li><i class="fa-solid fa-chevron-right"></i></li>
+          <li><a href="details.html">Details Page</a></li>
+          <li><i class="fa-solid fa-chevron-right"></i></li>
+          <li><a href="bag.html">Your Bag</a></li>
+          <li><i class="fa-solid fa-chevron-right"></i></li>
+          <li><a href="#">Checkout</a></li>
+        </ul>
+      </div>
     </section>
 
-    <section class="checkout-flex">
-      <section class="shipping-field">
-        <h2 class="h2-grey">Shipping details</h2>
-        <div class="line"></div>
-        <form action="#" method="post">
-          <div class="input-section">
-            <label for="fname">First name <i class="fa-sharp fa-regular fa-asterisk"></i></label>
-            <input type="text" id="fname" name="first-name" placeholder="Please enter" required>
-            <label for="lname">Last name <i class="fa-sharp fa-regular fa-asterisk"></i></label>
-            <input type="text" id="lname" name="last-name" placeholder="Please enter" required>
-            <label for="mail">Email address <i class="fa-sharp fa-regular fa-asterisk"></i></label>
-            <input type="email" id="mail" name="email" placeholder="Please enter" required>
-            <label for="subject">Street Address <i class="fa-sharp fa-regular fa-asterisk"></i></label>
-            <input type="text" id="subject" name="subject" placeholder="Please enter" required>
-            <label for="post">Postal code <i class="fa-sharp fa-regular fa-asterisk"></i></label>
-            <input type="text" id="post" name="post" placeholder="Please enter" required>
+    <section class="form__container">
+        <form id="form" method="GET">
+          <div class="register__container">
+            <h1><i class="fa-solid fa-1"></i>. Registration</h1>
+            <div id="error-registration" class="error-form"></div>
+            <div class="form-names">
+              <div class="input-control">
+                <label for="name">Name</label>
+                <input id="name" nam="name" type="text" placeholder="First" enterkeyhint="next" autocomplete="on" required minlength="2">
+              </div>
+              <div class="input-control">
+                <label for="last-name"><span class="span__empty">!!!Deleted!!!</span></label>
+                <input id="last-name" name="last-name" type="text" placeholder="Last" enterkeyhint="next" autocomplete="on" required minlength="2">
+              </div>
+            </div>
+            <div class="input-control">
+              <label for="email">Email</label>
+              <input id="email" name="email" type="text" placeholder="addmail@gmail.com" enterkeyhint="next" autocomplete="on" required minlength="9">
+            </div>
+            <div class="input-control">
+              <label for="password">Password</label>
+              <input id="password" name="password" type="password" placeholder="*******" enterkeyhint="next" autocomplete="on" required minlength="2">
+            </div>
+            <div class="checkbox">
+              <label for="makeAccount">Subscribe to our newsletter</label>
+              <input id="makeAccount" name="makeAccount" type="checkbox" placeholder="*******">
+            </div>
+          </div>
+
+          <div class="shipping__container">
+            <h2><i class="fa-solid fa-2"></i>. Shipping Details</h2>
+            <div id="error-shipping" class="error-form"></div>
+            <div class="input-control">
+              <label for="country">Country</label>
+              <input id="country" name="country" type="text" placeholder="Norway" enterkeyhint="next" autocomplete="on" required minlength="2">
+            </div>
+            <div class="input-control">
+              <label for="address">Street address</label>
+              <input id="address" name="address" type="text" placeholder="Myhome 1" enterkeyhint="next" autocomplete="on" required minlength="5">
+            </div>
+            <div class="form-names">
+              <div class="input-control">
+                <label for="city">City</label>
+                <input id="city" nam="city" type="text"placeholder="Oslo" enterkeyhint="next" autocomplete="on" required minlength="2">
+              </div>
+              <div class="input-control">
+                <label for="postal-code">Postal code</label>
+                <input id="postal-code" name="postal-code" type="text" placeholder="1030" enterkeyhint="next" autocomplete="on" required minlength="2">
+              </div>
+            </div>
+<!-- Only because the validateCheckoutForm.js did not work as it should, it never allowed to redirect to payment.html -->
+            <button type="submit" class="cta-continue" id="submit" href="payment.html">Save info</button>
+            <a  class="cta-continue" href="payment.html">Continue to payment</a>
           </div>
         </form>
-      </section>
-      <section class="payment-field">
-        <h2 class="h2-grey">Payment Method</h2>
-        <div class="line"></div>
-        <form action="#" method="post">
-          <div class="input-section">
-            <label for="card-name">Card holder <i class="fa-sharp fa-regular fa-asterisk"></i></label>
-            <input type="text" id="card-name" name="card-name" placeholder="Name" required>
-            <label for="card-nr">Card number <i class="fa-sharp fa-regular fa-asterisk"></i></label>
-            <input type="text" id="card-nr" name="card-nr" placeholder="Example 1234-22..." required>
-            <label for="exp">Exp date <i class="fa-sharp fa-regular fa-asterisk"></i></label>
-            <input type="email" id="exp" name="exp-date" placeholder="01/23" required>
-            <label for="cvc">CVC <i class="fa-sharp fa-regular fa-asterisk"></i></label>
-            <input type="text" id="cvc" name="cvc" placeholder="***" required>
-          </div>
-        </form>
-      </section>
-      <section class="order-section">
-        <div class="order-field">
-          <h2 class="h2-grey">Order summery</h2>
-          <div class="line"></div>
+
+
+        <div class="order__container">
+          <h3>Order Summary</h3>
+          <br>
           <img src="/pictures/RainyDays_Jacket4.png" class="checkout-img" alt="Black biker 2021 marine jacket">
           <h4 class="bag__jackets-title">Scott</h4>
+          <br>
           <div class="stars">
             <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i><span class="reviews">(129)</span></p>
           </div>
+          <br>
           <p class="bag__jackets-text">Black biker edition 2021 & Sea life Marine</p>
           <p class="bag__jackets-text"> Quantity: 1 Item</p>
           <p class="bag__jackets-text">Color: black</p>
-          <div class="line"></div>
+          <br>
           <p class="bag__jackets-price">Total 799,00 kr</p>
-          <a href="/checkous-success.html" class="cta-order">Place Order</a>
         </div>
-      </section>
+
+
     </section>
-    <div class="line"></div>
   </main>
 
   <footer> 
     <a href="index.html" class="footer-logo">
-      <img src="/pictures/Logo-white.png" alt="Logo of the website">
+      <img src="/pictures/Logo-white.png" alt="Logo of the website" class="footer-logo">
     </a>
     <nav class="footer-nav">
       <ul>
