--- a/details.html
+++ b/details.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
     <title>RAINYDAYS | Details</title>
     <meta name="description" content="All the details about the jackets you desire" >
@@ -20,7 +20,9 @@
   <body>
     <header>
       <section class="dark-header">
-        <p>Sale up to 20%</p>
+        <a href="deals.html" class="dark-header-text">
+          <p>Sale up to 20%</p>
+        </a>
       </section>
       <section class="lower-header">
         <label for="hamburger-menu"><i class="fa-sharp fa-solid fa-bars"></i><span class="span__empty">!!!Deleted!!!</span></label>
@@ -38,18 +40,25 @@
           </nav>
           <!-- Some Icons from Font Awesome and other websites did not work for some reason, had to use img from Figma, wrote description for blind people to understand the images -->
           <div class="icons">
-            <a href="#"><img src="/pictures/Icons-profile.png" alt="Your Profile"></a>
-            <a href="bag.html"><img src="/pictures/Icons-bag.png" alt="My Bag"></a>
-            <a href="#"><img src="/pictures/Icons-search.png" alt="Search"></a>
+            <a href="#"><i class="fa-solid fa-user"><span class="span__empty">!!!Deleted!!!</span></i></a>
+            <a href="bag.html"><i class="fa-solid fa-bag-shopping" id="bagIcon"><span class="span__empty">!!!Deleted!!!</span></i></a>
+            <a href="#"><i class="fa-solid fa-magnifying-glass"></i><span class="span__empty">!!!Deleted!!!</span></a>
           </div>
         </section>
       </header>
 
       <main class="body-small">
-        <section class="header-top">
-          <h1 class="h1-grey">Jacket information</h1>
-          <div class="line"></div>
+        <section>
+          <div class="breadcrumbs__container details__breadcrumbs">
+            <ul>
+              <li class="breadcrumbs-house"><a href="/"><i class="fa-solid fa-house"><span class="span__empty">!!!Deleted!!!</span></i></a></li>
+              <li><i class="fa-solid fa-chevron-right"></i></li>
+              <li><a href="">Details Page</a></li>
+            </ul>
+          </div>
         </section>
+        
+
         <section class ="details__section">
           <div class="details__container">
             <div class="loading__container"><span class="loading-indicator">Loading...</span></div>
@@ -59,7 +68,7 @@
 
       <footer>
       <a href="index.html" class="footer-logo">
-        <img src="/pictures/Logo-white.png" alt="Logo of the website">
+        <img src="/pictures/Logo-white.png" alt="Logo of the website" class="footer-logo">
       </a>
       <nav class="footer-nav">
         <ul>
