--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
   <!-- <link rel="stylesheet" href="/fontawesome-free-6.3.0-web/css/all.css"> -->
   <script defer src="js/index.js" type="module"></script>
   <script defer src="js/ui/hotjar.js"></script>
+  <script defer src="/js/helper/validateSignUp.js"></script>
 </head>
 
 
 <body>
   <header>
     <section class="dark-header">
-      <p>Sale up to 20%</p>
+      <a href="deals.html" class="dark-header-text">
+        <p>Sale up to 20%</p>
+      </a>
     </section>
     <section class="lower-header">
       <label for="hamburger-menu"><i class="fa-sharp fa-solid fa-bars"></i><span class="span__empty">!!!Deleted!!!</span></label>
@@ -39,36 +42,14 @@
         </nav>
       <!-- Some Icons from Font Awesome and other websites did not work for some reason, had to use img from Figma, wrote description for blind people to understand the images -->
       <div class="icons">
-        <a href="#"><img src="/pictures/Icons-profile.png" alt="Your Profile"></a>
-        <a href="bag.html"><img src="/pictures/Icons-bag.png" alt="My Bag"></a>
-        <a href="#"><img src="/pictures/Icons-search.png" alt="Search"></a>
+        <a href="#"><i class="fa-solid fa-user"><span class="span__empty">!!!Deleted!!!</span></i></a>
+        <a href="bag.html"><i class="fa-solid fa-bag-shopping" id="bagIcon"><span class="span__empty">!!!Deleted!!!</span></i></a>
+        <a href="#"><i class="fa-solid fa-magnifying-glass"></i><span class="span__empty">!!!Deleted!!!</span></a>
       </div>
     </section>
   </header>
 
   <main>
-    <!-- Invisible popup - only visible when pressing on the jackets (no Javascript)-->
-    <section>
-      <div class="popup" id="popup">
-        <img src="/pictures/RainyDays_Jacket4.png" class="popup__img" alt="Black biker jacket">
-        <div class="popup__content">
-        <h2>Scott</h2>
-        <a href="#" class="close"><i class="fa-solid fa-xmark"></i><span class="span__empty">!!!Deleted!!!</span></a>
-        <p>Black biker edition 2021 & Sea life Marine</p>
-        <p>Black biker is one of the most wanted pieces of our collection. Made and tested by our warehouses in Nepal. Highly affordable and durable.
-          Rain resistant, wind and tear strong.</p>
-        <p>True to size, 10% Cotton 90% Nylon</p>
-        <p>Black and grey options available. 
-          Inner zips that are reachable without opening the jacket. Possibilities to detach the inner layer for warmer weathers </p>
-        <p class="popup__price"><span class="sale-price">899kr</span> 799,00 kr</p>
-        <div class="popup__cta">
-          <a href="/bag.html" class="popup__cta-buy">Buy now</a>
-          <a href="#" class="popup__cta-add">Add to bag</a>
-        </div>
-        </div>
-      </div>
-    </section>
-
     <!-- Main Image aligned with the logo -->
     <section class="main-img">
       <div class="main-img__content">
@@ -106,37 +87,48 @@
     </section>
 
    <section class="gender">
-    <section class="man">
-      <div class="man__content">
-        <h5>Men</h5>
-        <a href="list-of-jackets.html" class="cta-discover">Discover our Collection</a>
+    <a href="man.html">
+      <div class="man">
+        <div class="man__content">
+          <h5>Men</h5>
+          <button class="cta-discover-gender">Discover our Collection</button>
+        </div>
       </div>
-    </section>
-    <section class="women">
-      <div class="women__content">
-        <h5>Women</h5>
-        <a href="list-of-jackets.html" class="cta-discover">Discover our Collection</a>
+    </a>
+    <a href="women.html">
+      <div class="women">
+        <div class="women__content">
+          <h5>Women</h5>
+          <button class="cta-discover-gender">Discover our Collection</button>
+        </div>
       </div>
-    </section>
+    </a>
   </section>
     
     <div class="line"></div>
 
     <section class="sign-up">
-      <div class="sign-up__content">
+      <div class="sign-up__content" id="signHeader">
         <h6>Sign up to get 25% off your next order</h6>
-        <form action="#" method="post">
-          <input type="email" id="email" name="email" title="Your email" placeholder="Enter your email address" required>
-          <input class="cta-sign-up" type="submit" value="Sign up">
+      </div>
+
+      <div class="sign-up-form" id="signUpForm">
+        <form id="formMain" method="GET" >
+            <div class="input-control-main">
+              <label for="email-contact"><span class="span__empty">!!!Deleted!!!</span></label>
+              <input id="email-contact" name="email-contact" type="text" placeholder="myemail@gmail.com" required required minlength="9" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+            </div>
+            <button class="cta-sign-up" type="submit" value="Sign up">Sign up</button>
         </form>
       </div>
     </section>
+
     <div class="line"></div>
   </main>
 
   <footer>
     <a href="index.html" class="footer-logo">
-      <img src="/pictures/Logo-white.png" alt="Logo of the website">
+      <img src="/pictures/Logo-white.png" alt="Logo of the website" class="footer-logo">
     </a>
     <nav class="footer-nav">
       <ul>
