--- a/women.html
+++ b/women.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
     <title>RAINYDAYS | Womenwear</title>
     <meta name="description" content="Best women jackets available from the Rainy Days collection">
@@ -21,7 +21,9 @@
   <body class="body-small">
     <header>
       <section class="dark-header">
-        <p>Sale up to 20%</p>
+        <a href="deals.html" class="dark-header-text">
+          <p>Sale up to 20%</p>
+        </a>
       </section>
       <section class="lower-header">
         <label for="hamburger-menu"><i class="fa-sharp fa-solid fa-bars"></i><span class="span__empty">!!!Deleted!!!</span></label>
@@ -39,9 +41,9 @@
           </nav>
           <!-- Some Icons from Font Awesome and other websites did not work for some reason, had to use img from Figma, wrote description for blind people to understand the images -->
           <div class="icons">
-            <a href="#"><img src="/pictures/Icons-profile.png" alt="Your Profile"></a>
-            <a href="bag.html"><img src="/pictures/Icons-bag.png" alt="My Bag"></a>
-            <a href="#"><img src="/pictures/Icons-search.png" alt="Search"></a>
+            <a href="#"><i class="fa-solid fa-user"><span class="span__empty">!!!Deleted!!!</span></i></a>
+            <a href="bag.html"><i class="fa-solid fa-bag-shopping" id="bagIcon"><span class="span__empty">!!!Deleted!!!</span></i></a>
+            <a href="#"><i class="fa-solid fa-magnifying-glass"></i><span class="span__empty">!!!Deleted!!!</span></a>
           </div>
         </section>
       </header>
@@ -61,7 +63,7 @@
 
       <footer>
       <a href="index.html" class="footer-logo">
-        <img src="/pictures/Logo-white.png" alt="Logo of the website">
+        <img src="/pictures/Logo-white.png" alt="Logo of the website" class="footer-logo">
       </a>
       <nav class="footer-nav">
         <ul>
