--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <ul>
             <li class="header-text"><a href="index.html" class="active">Home</a></li>
             <li class="header-text"><a href="deals.html">Deals</a></li>
-            <li class="header-text"><a href="women.html">Women</a></li>
+            <li class="header-text"><a href="women.html">Fruits</a></li>
             <li class="header-text"><a href="man.html">Man</a></li>
             <li class="header-text"><a href="list-of-jackets.html">All</a></li>
           </ul>
@@ -53,18 +53,18 @@
     <!-- Main Image aligned with the logo -->
     <section class="main-img">
       <div class="main-img__content">
-        <h1>Pushing The Comfort Zone</h1>
-        <a href="list-of-jackets.html" class="cta-discover">Discover our Collection</a>
+        <h1>Eat Healthy, Stay Healthy</h1>
+        <a href="list-of-jackets.html" class="cta-discover">Discover our Fruits</a>
       </div>
     </section>
 
     <!-- Text only visible on smaller viewport -->
     <section class="tlf-main-text">
       <div class="tlf-main-text__content">
-        <h2>Start your journey </h2>
-        <p>Comfort in any situation during any weather.</p>
-        <p>Wear with unlimited possibilities.</p>
-        <p>Strong fiber, Affordable, Life-lasting, Life-changing</p>
+        <h2>Fuel your journey </h2>
+        <p>Fruits in any situation during any weather.</p>
+        <p>Nutrition with unlimited possibilities.</p>
+        <p>Tasty fiber, Affordable, Life-saving, Life-changing</p>
       </div>
     </section>
 
@@ -78,38 +78,26 @@
     <!-- Everything below jackets -->
     <section class="home-text" >
       <div class="home-text__content">
-        <h4>Wear With Unlimited Possibilities</h4>
-        <p>Discover your true potential with our, all year long jackets with life lasting fibre.</p>
-        <p>Perfect for any outdoor activity, even skiing and mountain climbing</p> 
-        <p>Comfort in any situation during any weather.</p>
-        <p>-We are also carbon friendly</p>
+        <h4>Fruits With Unlimited Possibilities</h4>
+        <p>Discover your true potential with our, all year long fruits with lasting fibre.</p>
+        <p>Perfect for any outdoor activity, even at home and mountain climbing</p> 
+        <p>Tasty in any situation during any weather.</p>
+        <p>-We are also environment friendly</p>
       </div>
     </section>
 
-   <section class="gender">
-    <a href="man.html">
-      <div class="man">
-        <div class="man__content">
-          <h5>Men</h5>
-          <button class="cta-discover-gender">Discover our Collection</button>
-        </div>
-      </div>
-    </a>
-    <a href="women.html">
-      <div class="women">
-        <div class="women__content">
-          <h5>Women</h5>
-          <button class="cta-discover-gender">Discover our Collection</button>
-        </div>
-      </div>
-    </a>
-  </section>
+    <h4 class="thumbnail-header">Our favorite fruits just for you</h4>
+    <div class="line"></div>
+
+   <section class="thumbnails__container">
+    <div class="loading__container"><span class="loading-indicator">Loading...</span>
+   </section>
     
     <div class="line"></div>
 
     <section class="sign-up">
       <div class="sign-up__content" id="signHeader">
-        <h6>Sign up to get 25% off your next order</h6>
+        <h6>Sign up to get 5% off your next order</h6>
       </div>
 
       <div class="sign-up-form" id="signUpForm">
