--- a/bag.html
+++ b/bag.html
@@ -35,7 +35,7 @@
             <li class="header-text"><a href="deals.html">Deals</a></li>
             <li class="header-text"><a href="women.html">Women</a></li>
             <li class="header-text"><a href="man.html">Man</a></li>
-            <li class="header-text"><a href="list-of-jackets.html">All</a></li>
+            <li class="header-text"><a href="list-of-items.html">All</a></li>
           </ul>
         </nav> 
         <!-- Some Icons from Font Awesome and other websites did not work for some reason, had to use img from Figma, wrote description for blind people to understand the images -->
