--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Inria+Serif&family=Montserrat:wght@100&family=Roboto&display=swap" rel="stylesheet">
   <!-- <link rel="stylesheet" href="/fontawesome-free-6.3.0-web/css/all.css"> -->
   <script defer src="js/index.js" type="module"></script>
-  <script defer src="js/ui/hotjar.js"></script>
   <script defer src="/js/helper/validateSignUp.js"></script>
 </head>
 
@@ -37,7 +36,7 @@
             <li class="header-text"><a href="deals.html">Deals</a></li>
             <li class="header-text"><a href="women.html">Fruits</a></li>
             <li class="header-text"><a href="man.html">Man</a></li>
-            <li class="header-text"><a href="list-of-jackets.html">All</a></li>
+            <li class="header-text"><a href="list-of-items.html">All</a></li>
           </ul>
         </nav>
       <!-- Some Icons from Font Awesome and other websites did not work for some reason, had to use img from Figma, wrote description for blind people to understand the images -->
@@ -54,7 +53,7 @@
     <section class="main-img">
       <div class="main-img__content">
         <h1>Eat Healthy, Stay Healthy</h1>
-        <a href="list-of-jackets.html" class="cta-discover">Discover our Fruits</a>
+        <a href="list-of-items.html" class="cta-discover">Discover our Fruits</a>
       </div>
     </section>
 
