--- a/list-of-items.html
+++ b/list-of-items.html
@@ -56,8 +56,33 @@
     </section>
     <div class="line"></div>
 
+    <!-- <div class="search">
+      <input type="search" id="search-input" class="search-input" placeholder="Find item..."/>
+      <button class="search-button">Search</button>
+    </div>
+
+    <section>
+      <div class="categories">
+        <label for="sale">On Sale</label>
+        <input type="radio" id="sale" class="category" name="category" value="20"/>
+        <label for="size">Big Fruits</label>
+        <input type="radio" id="size" class="category" name="category" value="21"/>
+        <label for="exotic">Exotic</label>
+        <input type="radio" id="exotic" class="category" name="category" value="19"/>
+      </div>
+      <div class="per-page">
+        <label for="">Number per page</label>
+        <select class="per-page-selection">
+          <option value="2">Two</option>
+          <option value="4">Four</option>
+          <option value="6">Six</option>
+          <option value="10">All</option>
+        </select>
+      </div>
+    </section> -->
+
     <section class="spes-jacket__rows">
-      <div class="jackets__container" id="jackets__container"><div class="loading__container"><span class="loading-indicator">Loading...</span></div>
+      <div class="jackets-list__container" id="jackets-list__container"><div class="loading__container"><span class="loading-indicator">Loading...</span></div>
       </div>
     </section>
   </main>
