--- a/about.html
+++ b/about.html
@@ -32,10 +32,7 @@
         <nav class="main-header">
           <ul>
             <li class="header-text"><a href="index.html">Home</a></li>
-            <li class="header-text"><a href="deals.html">Deals</a></li>
-            <li class="header-text"><a href="women.html">Women</a></li>
-            <li class="header-text"><a href="man.html">Man</a></li>
-            <li class="header-text"><a href="list-of-items.html">All</a></li>
+            <li class="header-text"><a href="list-of-items.html">Fruits</a></li>
           </ul>
         </nav>
         <!-- Some Icons from Font Awesome and other websites did not work for some reason, had to use img from Figma, wrote description for blind people to understand the images -->
@@ -53,8 +50,8 @@
         <h1 class="about-sm-header_content">Jerremy Willson</h1>
         <h1 class="about-sm-quote">No One Will Get Cold</h1>
         <div class="about__content">
-          <p>Our journey started in 1980 after Jerremy Willson travelled to the mountain Mormolade in Italy. On his way he got cold, his jacket did not protect him from the rain, nor the wet wind. 
-            After almost not surviving the trip, he has seen an opportunity  to change the lives of a lot of people.  During that time and age, no company has put themselves through the harsh weathers using their own jackets. This was about to change as Jerremy founded Rainydays. 
+          <p>Our journey started in 1980 after Jerremy Willson travelled to the mountain Mormolade in Italy where he found fist first ananas. On his way he got cold, his jacket did not protect him from the rain, nor the wet wind. 
+            After almost not surviving the trip, he has seen an opportunity to change lifestyle of a lot of people.  During that time and age, no company has put themselves through the harsh weathers using their own body. This was about to change as Jerremy founded Rainy Days. 
           </p>
           <p class="about-sm-text">-Now no one will get cold</p>
           <p class="about-cta"><a href="list-of-jackets.html" class="cta-about-discover">Discover our Collection</a></p>
@@ -69,7 +66,7 @@
           After almost not surviving the trip, he has seen an opportunity  to change the lives of a lot of people.  During that time and age, no company has put themselves through the harsh weathers using their own jackets. This was about to change as Jerremy founded Rainydays. 
         </p>
         <p class="about-sm-text">-Now no one will get cold</p>
-        <a href="list-of-jackets.html" class="cta-about-discover">See Collection</a>
+        <a href="list-of-items.html" class="cta-about-discover">See Fruits</a>
       </div>
     </section>
   </main>
