--- a/bag.html
+++ b/bag.html
@@ -32,10 +32,7 @@
         <nav class="main-header">
           <ul>
             <li class="header-text"><a href="index.html">Home</a></li>
-            <li class="header-text"><a href="deals.html">Deals</a></li>
-            <li class="header-text"><a href="women.html">Women</a></li>
-            <li class="header-text"><a href="man.html">Man</a></li>
-            <li class="header-text"><a href="list-of-items.html">All</a></li>
+            <li class="header-text"><a href="list-of-items.html">Fruits</a></li>
           </ul>
         </nav> 
         <!-- Some Icons from Font Awesome and other websites did not work for some reason, had to use img from Figma, wrote description for blind people to understand the images -->
@@ -65,26 +62,14 @@
     <section class="bag-main-flex">
       <section class="bag">
         <h1>My Bag (1)</h1>
-        <img src="/pictures/RainyDays_Jacket4.png" class="bag-img" alt="Black biker 2021 marine jacket">
+        <img src="/images/no-image.jpeg" class="bag-img" alt="Black biker 2021 marine jacket">
           <div class="bag__content">
               <div class="stars">
-                <h2 class="bag__jackets-title">Scott</h2>
+                <h2 class="bag__jackets-title">Cherry</h2>
                 <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i><span class="reviews">(129)</span></p>
               </div>
-            <p class="bag__jackets-text">Black biker edition 2021 & Sea life Marine</p>
+            <p class="bag__jackets-text">Super tasty cherry line no other, eat and stay healthy</p>
             <form action="#" method="post">
-              <div>
-                <input type="radio" id="size-small" name="sizes">
-                <label for="size-small" class="btn-size">S</label>
-                <input type="radio" id="size-medium" name="sizes">
-                <label for="size-medium" class="btn-size">M</label>
-                <input type="radio" id="size-large" name="sizes">
-                <label for="size-large" class="btn-size">L</label>
-                <input type="radio" id="size-xl" name="sizes">
-                <label for="size-xl" class="btn-size">XL</label>
-                <input type="radio" id="size-xxl" name="sizes">
-                <label for="size-xxl" class="btn-size">XXL</label>
-              </div>
               <div class="bag__order-amount">
                 <label for="amount">Amount</label>
                 <select name="amount" id="amount" class="cta_quantity">
@@ -94,7 +79,7 @@
                 </select>
               </div>
             </form>
-            <p class="bag__jackets-price"><span class="sale-price">899kr</span> 799,00 kr</p>
+            <p class="bag__jackets-price">19,00 kr</p>
             <p class="bag__shipping-time"> <i class="fa-solid fa-plus"></i>Free shipping</p>
           </div>
       </section>
@@ -104,12 +89,12 @@
           <h2>Order Summary</h2>
           <hr>
           <p class="check">Items: 1</p>
-          <p class="check">Subtotal: 799,00kr</p>
+          <p class="check">Subtotal: 19,00kr</p>
           <p class="check">Giftcard: None</p>
           <p class="check">Shipping: Free</p>
           <hr>
           <hr>
-          <p class="check">Total: 799,00 kr</p>
+          <p class="check">Total: 19,00 kr</p>
           <hr>
           <a href="checkout.html" class="cta-submit">Checkout</a>
         </div>
