--- a/checkous-success.html
+++ b/checkous-success.html
@@ -32,10 +32,7 @@
         <nav class="main-header">
           <ul>
             <li class="header-text"><a href="index.html">Home</a></li>
-            <li class="header-text"><a href="deals.html">Deals</a></li>
-            <li class="header-text"><a href="women.html">Women</a></li>
-            <li class="header-text"><a href="man.html">Man</a></li>
-            <li class="header-text"><a href="list-of-items.html">All</a></li>
+            <li class="header-text"><a href="list-of-items.html">Fruits</a></li>
           </ul>
         </nav>
         <!-- Some Icons from Font Awesome and other websites did not work for some reason, had to use img from Figma, wrote description for blind people to understand the images -->
@@ -60,7 +57,7 @@
     </section>
     <div class="success-line-top"></div>
       <section class="finished-order">
-        <img src="/pictures/RainyDays_Jacket4.png" alt="Black biker jacket">
+        <img src="/images/no-image.jpeg" class="checkout-img" alt="Black biker jacket">
         <table>
           <tr>
             <th class="table__title">Product</th>
@@ -68,8 +65,8 @@
             <th class="table__title">Quantity</th>
           </tr>
           <tr>
-            <th class="table__content">Jacket-man</th>
-            <th class="table__content">Black biker edition 2021 & Sea life Marine</th>
+            <th class="table__content">Cherry</th>
+            <th class="table__content">The best cherry you ll have</th>
             <th class="table__content">1</th>
           </tr>
         </table>
