--- a/checkout.html
+++ b/checkout.html
@@ -33,10 +33,7 @@
         <nav class="main-header">
           <ul>
             <li class="header-text"><a href="index.html">Home</a></li>
-            <li class="header-text"><a href="deals.html">Deals</a></li>
-            <li class="header-text"><a href="women.html">Women</a></li>
-            <li class="header-text"><a href="man.html">Man</a></li>
-            <li class="header-text"><a href="list-of-items.html">All</a></li>
+            <li class="header-text"><a href="list-of-items.html">Fruits</a></li>
           </ul>
         </nav>
         <!-- Some Icons from Font Awesome and other websites did not work for some reason, had to use img from Figma, wrote description for blind people to understand the images -->
@@ -123,18 +120,18 @@
         <div class="order__container">
           <h3>Order Summary</h3>
           <br>
-          <img src="/pictures/RainyDays_Jacket4.png" class="checkout-img" alt="Black biker 2021 marine jacket">
-          <h4 class="bag__jackets-title">Scott</h4>
+          <img src="/images/no-image.jpeg" class="checkout-img" alt="Black biker 2021 marine jacket">
+          <h4 class="bag__jackets-title">Cherry</h4>
           <br>
           <div class="stars">
             <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i><span class="reviews">(129)</span></p>
           </div>
           <br>
-          <p class="bag__jackets-text">Black biker edition 2021 & Sea life Marine</p>
+          <p class="bag__jackets-text">Super tasty cherry line no other, eat and stay healthy</p>
           <p class="bag__jackets-text"> Quantity: 1 Item</p>
-          <p class="bag__jackets-text">Color: black</p>
+          <p class="bag__jackets-text"> Tasty: Very </p>
           <br>
-          <p class="bag__jackets-price">Total 799,00 kr</p>
+          <p class="bag__jackets-price">Total 19,00 kr</p>
         </div>
 
 
