--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
         <nav class="main-header">
           <ul>
             <li class="header-text"><a href="index.html" class="active">Home</a></li>
-            <li class="header-text"><a href="deals.html">Deals</a></li>
-            <li class="header-text"><a href="women.html">Fruits</a></li>
-            <li class="header-text"><a href="man.html">Man</a></li>
-            <li class="header-text"><a href="list-of-items.html">All</a></li>
+            <li class="header-text"><a href="list-of-items.html">Fruits</a></li>
           </ul>
         </nav>
       <!-- Some Icons from Font Awesome and other websites did not work for some reason, had to use img from Figma, wrote description for blind people to understand the images -->
