--- a/list-of-items.html
+++ b/list-of-items.html
@@ -33,7 +33,7 @@
         <nav class="main-header">
           <ul>
             <li class="header-text"><a href="/">Home</a></li>
-            <li class="header-text"><a class="active">All</a></li>
+            <li class="header-text"><a class="active">Fruits</a></li>
           </ul>
         </nav>
        <!-- Some Icons from Font Awesome and other websites did not work for some reason, had to use img from Figma, wrote description for blind people to understand the images -->
