--- a/list-of-items.html
+++ b/list-of-items.html
@@ -79,8 +79,8 @@
     </section> -->
 
     <section class="spes-jacket__rows">
-      <div class="jackets-list__container" id="jackets-list__container"><div class="loading__container"><span class="loading-indicator">Loading...</span></div>
-      </div>
+      <div class="loading__container"><span class="loading-indicator">Loading...</span>
+    </div>
     </section>
   </main>
 
